--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:serve": "vitepress serve docs",
+    "deploy:win": "powershell bin/autoDeploy.bat"
   }
 }
