--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+  "type": "module",
   "devDependencies": {
     "vitepress": "^1.0.0-rc.4"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs",
+    "docs:preview": "vitepress preview docs",
     "deploy:win": "powershell bin/autoDeploy.bat"
   }
 }
